test/modules/sungeun/no-use-type-alias.good
no-use-type-alias.chpl:6: In function 'main':
no-use-type-alias.chpl:7: error: 'X' undeclared (first use this function)
no-use-type-alias.chpl:10: error: 'Z' undeclared (first use this function)
