test/modules/sungeun/no-use-type-alias.chpl
module X {
  type T = string;
}

module Y {
  proc main() {
    var t: X.T;
    writeln("[",t,"]");

    Z.f();
  }
}
